[tool.poetry]
name = "devtool"
version = "0.0.1"
description = "An opinionated CLI for making local development a joy"

license = "MIT"

authors = [
  "Dann Bohn <djb44@psu.edu>"
]

readme = 'README.md'

repository = "https://git.psu.edu/k8s/devtool"
homepage = "https://git.psu.edu/k8s/devtool"

keywords = ['k8s', 'helm', 'minikube', 'development']

[tool.poetry.dependencies]
pyyaml = "^3.13"
termcolor = "^1.1"
docopt = "^0.6.2"
jinja2 = "^2.10"

