[tool.poetry]
name = "devtool"
version = "v0.0.8"
description = "An opinionated CLI for making local development a joy"

license = "MIT"

authors = [
  "Dann Bohn <djb44@psu.edu>"
]

readme = 'README.md'

repository = "https://git.psu.edu/k8s/devtool"
homepage = "https://git.psu.edu/k8s/devtool"

keywords = ['k8s', 'helm', 'minikube', 'development']

[tool.poetry.dependencies]
pyyaml = "^3.13"
jinja2 = "^2.10"
pyinstaller = "^3.4"
click = "^7.0"
colorama = "^0.4.1"
click-default-group = "^1.2"
dis3 = "^0.1.3"

[tool.poetry.scripts]
devtool = "devtool.cli:main"

